--- a/App.config
+++ b/App.config
@@ -1,6 +1,25 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="CollegeRestraunt.Properties.Settings.PI2324_dsedlan22_DBConnectionString"
+            connectionString="Data Source=31.147.206.65;Initial Catalog=PI2324_dsedlan22_DB;User ID=PI2324_dsedlan22_User;Password=&quot;!;sx].Ga&quot;"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
     </startup>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="SQLitePCLRaw.core" publicKeyToken="1488e028ca7ab535" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.1.8.2226" newVersion="2.1.8.2226" />
+		  <add name="SQLite Data Provider"
+                  invariant="System.Data.SQLite"
+                  description=".Net Framework Data Provider for SQLite"
+                  type="System.Data.SQLite.SQLiteFactory, System.Data.SQLite" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
