--- a/CollegeRestraunt.csproj
+++ b/CollegeRestraunt.csproj
@@ -107,6 +107,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="RegistracijaProizvoda.resx">
+      <DependentUpon>RegistracijaProizvoda.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="RegistrirajStudenta.resx">
       <DependentUpon>RegistrirajStudenta.cs</DependentUpon>
     </EmbeddedResource>
